# micropython

./: .gitignore  BUGS_FIXED_SUMMARY.md  BUILD_NATIVE_FIRMWARE.md  CODE_REVIEW.md  FEATURE_REQUESTS.md  PI5_CODE_REVIEW.md  RASPBERRY_PI_5_STATUS.md  probe_stm32.py  test_list_sort_mutation.py  test_medium_fixes.py  test_sparkfun.py
.claude/: settings.local.json
F429ZI/: CONNECTOR    PIN    DEFINITIONLABEL.txt  Makefile  README.md  STM32_Full.ioc  STM32_Standalone.ioc  build_and_flash.ps1  gen.script  gen2.script  generate.script
esp32_cpp_tests/: README.md
extmod/: modlwip.c  modre.c  moductypes.c  vfs_posix.c
firmware/: PYBV11-v1.28-BUGFIXES.hex  PYBV11-v1.28-NATIVE.hex  PYBV11-v1.28-PATCHED.dfu  PYBV11-v1.28-PATCHED.hex  PYBV11-v1.28.0-preview.18-OFFICIAL.hex
micropython testing software/: C_FIRMWARE_UPGRADE_NOTES.md  accel_log.csv  accel_logger.py  adc_dac_test.csv  (+24 more)
pico2_cpp_tests/: CMakeLists.txt  README.md
pico2_cpp_tests/01_blink/: CMakeLists.txt  README.md  main.cpp
pico2_cpp_tests/02_serial_hello/: README.md  main.cpp
pico2_cpp_tests/03_gpio_input/: README.md  main.cpp
pico2_cpp_tests/04_pwm_led/: CMakeLists.txt  README.md  main.cpp
pico2_cpp_tests/05_adc_read/: CMakeLists.txt  README.md  main.cpp
pico2_cpp_tests/06_uart_echo/: CMakeLists.txt  README.md  main.cpp
pico2_cpp_tests/07_i2c_scan/: CMakeLists.txt  README.md  main.cpp
pico2_cpp_tests/08_spi_test/: CMakeLists.txt  README.md  main.cpp
pico2_cpp_tests/09_multicore/: CMakeLists.txt  README.md  main.cpp
pico2_cpp_tests/10_timer_interrupt/: CMakeLists.txt  README.md  main.cpp
(+182 files in other folders)
